# agentcore-timeseries-sagemaker

./: .gitignore  .mcp.json  Dockerfile  README.md  agent.py  blogpost-session-journal.md  pyproject.toml
agents/: __init__.py  advanced_eda_agent.py  code_interpreter_utils.py  comprehensive_report_agent.py  dataset_analysis_agent.py  intelligent_feature_engineering_agent.py  sagemaker_lstm.py  sagemaker_simple.py  sagemaker_tuning.py
sagemaker_scripts/: inference_lstm.py  inference_working.py  requirements.txt  train_arima.py  train_lstm.py
scripts/: intelligent_dashboard_v2.py  monitor_endpoint.py  setup.sh  test_endpoint.py  update_endpoint.py  verify_setup.sh
terraform/: code_interpreter.tf  code_interpreter_iam.tf  eventbridge.tf  main.tf  outputs.tf  sagemaker.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: README.md  test_dashboard_simulation.py  test_end_to_end.py  test_individual_tools.py
